# py-sandbox-11

./: .env.example  .gitignore  LOGGING.md  README.md  docker-compose.yml  main.py  pyproject.toml
keys/: private_key.pem  public_key.pem
migrations/: env.py
migrations/versions/: 878f031f1eab_initial_migration_with_users_and_todos.py
scripts/: generate_keys.py
src/api/: __init__.py  main.py
src/api/core/: auth.py  config.py  database.py  exceptions.py  logging.py  security.py
src/api/middleware/: error_handler.py
src/api/models/: todo.py  user.py
src/api/routes/: auth.py  todos.py  users.py
src/api/schemas/: auth.py  todo.py  user.py
src/mod_b/: work_me.py
tests/: conftest.py  test_api.py
tests/integration/: __init__.py  test_user_integration.py
tests/mod_a/: test_utils.py
tests/mod_b/: test_work_me.py
